kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dwebapp-frontend
  labels:
    name: dwebapp-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dwebapp-frontend
  template:
    metadata:
      labels:
        app: dwebapp-frontend
    spec:
      containers:
        - name: dwebapp-frontend
          image: aikyab4u/dwebapp-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: regcred
