kubernetes/test.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: webapp
          image: aikyab4u/webapp:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      restartPolicy: Always
