kubernetes/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dwebapp-api-service
  labels:
    service: dwebapp-api-service
spec:
  type: LoadBalancer
  ports:
    - name: tcp-port
      port: 80
      targetPort: 8000
      protocol: TCP
  selector:
    app: dwebapp-api
