kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dwebapp-frontend-service
  labels:
    app: dwebapp-frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: dwebapp-frontend
