kubernetes/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db-service
  labels:
    app: postgres-db-service
spec:
  type: NodePort
  ports:
   - port: 5432
  selector:
   app: postgres-db
