kubernetes/aws-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aws-ingress
spec:
  rules:
    - host: dwebapp-ingress.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dwebapp-frontend-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: dwebapp-api-service
                port:
                  number: 8000
