kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dwebapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: app.dwebapp.com
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: dwebapp-frontend-service
            port:
              number: 80
      # - path: /api(/|$)(.*)
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: dwebapp-api-service
      #       port:
      #         number: 80
